# NAVO-Admin

./: .gitignore  LICENSE  README.md
backend/: app.py  pyproject.toml  requirements.txt
backend/data/: asignaciones.json
backend/data/rutas/: chinandega_leon.json
backend/src/navo_admin/: __init__.py
backend/src/navo_admin/api/: app.py  state.py
backend/src/navo_admin/core/: __init__.py  config.py  data_manager.py  gps.py
backend/src/navo_admin/detector/: __init__.py  engine.py  fraud_detector.py  gate_counter.py  service.py  tracker.py
backend/src/navo_admin/models/: __init__.py  schemas.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: main.js
frontend/pages/: asignacion.html  informes.html  rutas.html  total_generado.html
