[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "navo-admin"
version = "0.1.0"
description = "Open-source bus route auditing and fraud detection system"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.138",
    "uvicorn>=0.49",
    "yolox @ git+https://github.com/Megvii-BaseDetection/YOLOX.git",
    "supervision>=0.19",
    "onnxruntime>=1.15",
    "opencv-python>=4.13",
    "pydantic>=2.13",
    "requests>=2.34",
    "numpy>=2.4",
    "torch>=2.12",
    "torchvision>=0.27",
    "python-multipart>=0.0.32",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"navo_admin" = ["py.typed"]
